libs/extractor/tests/snapshots/all_tests__wrong_styled_with_variable_like_emotion_props.snap
---
source: libs/extractor/tests/all_tests.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {styled} from '@devup-ui/core'\n        const StyledDiv = styled(null)`\n          background: ${props => props.bg};\n          color: red;\n        `\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: false, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "const StyledDiv = styled(null)`\n          background: ${(props) => props.bg};\n          color: red;\n        `;\n",
}
